--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,11 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
     Development Status :: 2 - Pre-Alpha
-    Intended Audience :: Developers
+    Intended Audience :: Science/Research
     Framework :: napari
-    Topic :: Software Development :: Testing
+    Topic :: Scientific/Engineering :: Image Processing
+    Topic :: Scientific/Engineering :: Information Analysis
+    Topic :: Scientific/Engineering :: Medical Science Apps
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
