--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@
 # Requirements of your napari plugin should be listed in setup.cfg
 # See also: https://caremad.io/posts/2013/07/setup-vs-requirement/
 
+mahotas
+napari-time-slicer
+napari-tools-menu>=0.4.2
 -e .
