--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ install_requires =
     numpy
     mahotas
     napari-time-slicer
-    napari-tools-menu
+    napari-tools-menu>=0.4.2
 
 
 [options.packages.find]
